2009-02-06  Brian Pepple  <bpepple@fedoraproject.org>

	* src/nsc-extension.c:
	* src/nsc-gstreamer.[ch] (nsc_gstreamer_supports_musepack): 
	Add musepack support. (Bug #10)

2009-01-05  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.ac:
	Drop package check module for gstreamer-plugins-base-0.10.

2009-01-04  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.ac:
	* src/nsc-gstreamer.c (nsc_gstreamer_convert_file): 
	Use gstreamer gio plugins file property. Bump minimum
	version of gstreamer needed to 0.10.20.

2009-01-03  Brian Pepple  <bpepple@fedoraproject.org>

	* Release 1.0.0
	* README:
	* NEWS:
	* configure.ac: Update for release.

2009-01-03  Brian Pepple  <bpepple@fedoraproject.org>

	* src/nsc-gstreamer.c: Use default value for queue
	plugin.  This will fix tags for flacs.

2008-12-29  Brian Pepple  <bpepple@fedoraproject.org>

	* src/nsc-gstreamer.c (build_encoder):
	Rearrange pipeline to fix wavpack conversions.

2008-11-28  Brian Pepple  <bpepple@fedoraproject.org>

	* src/nsc-extension.c (file_is_sound):
	Add support for 'audio/ogg' mime type.

2008-10-27  Brian Pepple  <bpepple@fedoraproject.org>

	* Release 0.7.0
	* README:
	* NEWS:
	* TODO: Update files for release.

2008-09-27  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.ac:
	* src/nsc-converter.c:
	* src/nsc-gstreamer.[ch]: Use gio sink & source,
	instead of the gnomevfs src & sink.

2008-08-05  Brian Pepple  <bpepple@fedoraproject.org>

	* configure.ac: Bump version.
	
	* data/progress.xml:
	* src/nsc-gstreamer.[ch]: 
	* src/nsc-converter.c: Add progress bar to show
	speed and eta of file conversion.

2008-06-08  Brian Pepple  <bpepple@fedoraproject.org>

	* data/main.xml: Use gtk-convert button instead of
	gtk-ok button.

2008-04-05  Brian Pepple  <bpepple@fedoraproject.org>

	* Release 0.5.0

2008-04-05  Brian Pepple  <bpepple@fedoraproject.org>

	* data/progress.glade:
	* data/progress.xml:
	* src/nsc-converter.c (progress_cancel_cb): 