@@ -1,3 +1,8 @@
+2009-02-08  Brian Pepple  <bpepple@fedoraproject.org>
+
+	* src/nsc-converter.c (converter_response_cb):
+	Add status icon to allow hide/show of progress dialog.
+
 2009-02-06  Brian Pepple  <bpepple@fedoraproject.org>
 
 	* src/nsc-extension.c:
